fix when the post overflows out of the text panel

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -14,6 +14,6 @@ textarea {
   font-size: smaller;
 }
 
-#post-fix {
-  overflow: ellipsis;
+.media-body {
+  word-break: break-all;
 }
